--- a/Extra_HTML/aula688_tags_HTML.html
+++ b/Extra_HTML/aula688_tags_HTML.html
@@ -9,3 +9,6 @@ https://www.w3schools.com/html/html_form_input_types.asp
 
 # Como estruturar um formulário HTML
 https://developer.mozilla.org/pt-BR/docs/Learn/Forms/How_to_structure_a_web_form
+
+# seletores 
+https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_Selectors#especifica%C3%A7%C3%B5es
