--- a/Extra_HTML/aula695_formularios_HTML.html
+++ b/Extra_HTML/aula695_formularios_HTML.html
@@ -83,7 +83,8 @@
 
                 <p>
                     <label for="number">Number:</label>
-                    <input type="number" id="number" name="number" placeholder="digite um número" min="10" max="50" step="5">
+                    <input type="number" id="number" name="number" placeholder="digite um número" min="10" max="50"
+                        step="5">
                 </p>
 
                 <p>
@@ -128,11 +129,11 @@
 
                         <optgroup label="Teste">
 
-                        <option value="qualquer 1" label="Label 1">
-                        <option value="qualquer 2" label="Label 2" selected>
-                        <option value="qualquer 3" label="Label 3">
-                        <option value="qualquer 4" label="Label 4" disabled>
-                        <option value="qualquer 5" label="Label 5">
+                            <option value="qualquer 1" label="Label 1">
+                            <option value="qualquer 2" label="Label 2" selected>
+                            <option value="qualquer 3" label="Label 3">
+                            <option value="qualquer 4" label="Label 4" disabled>
+                            <option value="qualquer 5" label="Label 5">
 
                         </optgroup>
 
