--- a/Extra_HTML/aula688_tags_HTML.html
+++ b/Extra_HTML/aula688_tags_HTML.html
@@ -12,3 +12,6 @@ https://developer.mozilla.org/pt-BR/docs/Learn/Forms/How_to_structure_a_web_form
 
 # seletores 
 https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_Selectors#especifica%C3%A7%C3%B5es
+
+#seletores de atributos
+https://developer.mozilla.org/pt-BR/docs/Web/CSS/Attribute_selectors
