--- a/Extra_HTML/aula688_tags_HTML.html
+++ b/Extra_HTML/aula688_tags_HTML.html
@@ -15,3 +15,6 @@ https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_Selectors#especifica%C3%A7%
 
 #seletores de atributos
 https://developer.mozilla.org/pt-BR/docs/Web/CSS/Attribute_selectors
+
+# pseudo-classes
+https://developer.mozilla.org/pt-BR/docs/Web/CSS/Pseudo-classes
