--- a/Extra_HTML/aula695_formularios_HTML.html
+++ b/Extra_HTML/aula695_formularios_HTML.html
@@ -26,7 +26,7 @@
         <form action="#" method="get" target="_blank" autocomplete="off">
 
 
-            <h1>Cabeçalho</h1>
+            <h1 class="heading">Cabeçalho</h1>
             <p>Formulário</p>
 
             <fieldset>
@@ -38,7 +38,7 @@
 
                 <p>
                     <label for="dev">Sou um dev Python:</label>
-                    <input type="checkbox" id="dev" name="dev" value="sim" checked><br />
+                    <input type="checkbox" id="dev" name="dev" value="sim" checked><br>
                     <label for="dev">Sou um dev Javascript:</label>
                     <input type="checkbox" id="dev" name="dev" value="sim"><br />
                     <label for="dev">Sou um dev PHP:</label>
