--- a/Extra_HTML/aula715_unidades_de_medidas/medidas.html
+++ b/Extra_HTML/aula715_unidades_de_medidas/medidas.html
@@ -1,4 +1,3 @@
-
 <!-- https://www.w3schools.com/cssref/css_units.php -->
 
 
@@ -6,6 +5,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,20 +13,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="medidas.css">
 </head>
+
 <body>
     <a href="#one">one</a>
     <a href="#two">two</a>
     <a href="#three">three</a>
     <div class="pai" id="one">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur, quia fugit ipsa natus autem fugiat, amet, nisi error nostrum earum pariatur laboriosam nihil provident praesentium labore dignissimos delectus dolore!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur, quia fugit ipsa natus autem fugiat,
+            amet, nisi error nostrum earum pariatur laboriosam nihil provident praesentium labore dignissimos delectus
+            dolore!</p>
     </div>
     <div class="pai color-one" id="two">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur, quia fugit ipsa natus autem fugiat, amet, nisi error nostrum earum pariatur laboriosam nihil provident praesentium labore dignissimos delectus dolore!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur, quia fugit ipsa natus autem fugiat,
+            amet, nisi error nostrum earum pariatur laboriosam nihil provident praesentium labore dignissimos delectus
+            dolore!</p>
     </div>
     <div class="pai color-two" id="three">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur, quia fugit ipsa natus autem fugiat, amet, nisi error nostrum earum pariatur laboriosam nihil provident praesentium labore dignissimos delectus dolore!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur, quia fugit ipsa natus autem fugiat,
+            amet, nisi error nostrum earum pariatur laboriosam nihil provident praesentium labore dignissimos delectus
+            dolore!</p>
     </div>
-    
-</body>
-</html>
 
+</body>
+
+</html>
