--- a/Extra_HTML/aula713_Display-GRID/display.html
+++ b/Extra_HTML/aula713_Display-GRID/display.html
@@ -10,20 +10,66 @@
 </head>
 
 <body>
-    <div class="grid">
-        <div class="col"><div class="col-content">conteudo</div></div>
-        <div class="col"><div class="col-content">conteudo</div></div>
-        <div class="col"><div class="col-content">conteudo</div></div>
-        <div class="col"><div class="col-content">conteudo</div></div>
-        <div class="col"><div class="col-content">conteudo</div></div>
-        <div class="col"><div class="col-content">conteudo</div></div>
-        <div class="col"><div class="col-content">conteudo</div></div>
+
+    <nav class="menu">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#full-page">Full page</a></li>
+        </ul>
+
+    </nav>
+
+
+
+    <div id="home" class="grid">
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">conteudo</div>
+        </div>
+
 
     </div>
 
     </div>
+    <section id="full-page" class="full-page">
+        <div class="full-page-content">
+        <h1>Lorem ipsum</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi repudiandae quos tempora deleniti. Dolor
         magni architecto aperiam fugiat quis pariatur in eos explicabo? Aliquam, minus a ullam quis suscipit nihil?</p>
+    </div>
+    </section>
 </body>
 
 </html>
