--- a/EXTRA_Landing Page/index.html
+++ b/EXTRA_Landing Page/index.html
@@ -21,14 +21,14 @@
 <body class="main-bg">
     <aside class="menu white-bg">
         <div class="main-content menu-content">
-            <h1><a href="#">LOGO</a></h1>
+            <h1><a href="#home">LOGO</a></h1>
             <nav>
                 <ul>
                     <li><a href="#intro">intro</a></li>
-                    <li><a href="#top3">top3</a></li>
-                    <li><a href="#">gallery</a></li>
-                    <li><a href="#">work</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="#grid-one">grid-one</a></li>
+                    <li><a href="#gallery">gallery</a></li>
+                    <li><a href="#grid-two">grid-two</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,7 +36,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section id="intro" class="intro main-bg section">
+    <section id="home" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>January brings us Firefox 85</h2>
@@ -50,13 +50,202 @@
         </div>
     </section>
 
-    <section id="top3" class="white-bg section">
-       <div class="main-content top3-content">
-        <h2>Top 3 jobs</h2>
-        <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some surprises at the machine’s performance. This post details some background information on the experience of porting Firefox to run natively on these CPUs.</p>
-        <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
-        <p>We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur, and discuss various updater problems we had to deal with. We’ll conclude with the release and an overview of various other improvements that are in the pipeline.</p>
-       </div>
+    <section id="intro" class="white-bg section">
+        <div class="main-content top3-content">
+            <h2>news coverage and some surprises</h2>
+            <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+                some surprises at the machine’s performance. This post details some background information on the
+                experience of porting Firefox to run natively on these CPUs.</p>
+            <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that
+                needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
+            <p>We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur,
+                and discuss various updater problems we had to deal with. We’ll conclude with the release and an
+                overview of various other improvements that are in the pipeline.</p>
+        </div>
+    </section>
+
+    <section id="grid-one" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+
+
+            <h2 class="grid-main-heading">My grid</h2>
+
+            <p class="grid-description">Uma breve descrição</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis vero commodi neque
+                        blanditiis
+                        laborum praesentium, optio modi ex soluta iusto voluptas cum dolorem fugiat provident deleniti
+                        ducimus explicabo nemo?</p>
+                </article>
+                <article>
+                    <h3>Teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis vero commodi neque
+                        blanditiis
+                        laborum praesentium, optio modi ex soluta iusto voluptas cum dolorem fugiat provident deleniti
+                        ducimus explicabo nemo?</p>
+                </article>
+                <article>
+                    <h3>Teste 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis vero commodi neque
+                        blanditiis
+                        laborum praesentium, optio modi ex soluta iusto voluptas cum dolorem fugiat provident deleniti
+                        ducimus explicabo nemo?</p>
+                </article>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="gallery" class="grid-one white-bg section">
+        <div class="main-content grid-one-content">
+
+
+            <h2 class="grid-main-heading">gallery</h2>
+
+            <p class="grid-description">Uma breve descrição</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/?city,night?r=1/360x360" alt="random image">
+
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/?city,night?r=2/360x360" alt="random image">
+
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/?city,night?r=3/360x360" alt="random image">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/?city,night?r=4/360x360" alt="random image">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/?city,night?r=5/360x360" alt="random image">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/?city,night?r=6/360x360" alt="random image">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <section id="grid-two" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+
+
+            <h2 class="grid-main-heading">My grid</h2>
+
+            <p class="grid-description">Uma breve descrição</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis vero commodi neque
+                        blanditiis
+                        laborum praesentium, optio modi ex soluta iusto voluptas cum dolorem fugiat provident deleniti
+                        ducimus explicabo nemo?</p>
+                </article>
+                <article>
+                    <h3>Teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis vero commodi neque
+                        blanditiis
+                        laborum praesentium, optio modi ex soluta iusto voluptas cum dolorem fugiat provident deleniti
+                        ducimus explicabo nemo?</p>
+                </article>
+                <article>
+                    <h3>Teste 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis corporis vero commodi neque
+                        blanditiis
+                        laborum praesentium, optio modi ex soluta iusto voluptas cum dolorem fugiat provident deleniti
+                        ducimus explicabo nemo?</p>
+                </article>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="pricing" class="white-bg section">
+        <div class="main-content top3-content">
+            <h2>Princing</h2>
+            <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+                some surprises at the machine’s performance. This post details some background information on the
+                experience of porting Firefox to run natively on these CPUs.</p>
+            <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that
+                needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
+
+                <div class="responsive-table">
+            <table>
+                <caption>Pricing table</caption>
+
+                <thead>
+                    <tr>
+                        <th>Title 1</th>
+                        <th>Title 2</th>
+                        <th>Title 3</th>
+                        <th>Title 4</th>
+                        <th>Title 5</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                        <td>Content 4</td>
+                        <td>Content 5</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                        <td>Content 4</td>
+                        <td>Content 5</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                        <td>Content 4</td>
+                        <td>Content 5</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                        <td>Content 4</td>
+                        <td>Content 5</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                        <td>Content 4</td>
+                        <td>Content 5</td>
+                    </tr>
+                    <tr>
+                        <td>Content 1</td>
+                        <td>Content 2</td>
+                        <td>Content 3</td>
+                        <td>Content 4</td>
+                        <td>Content 5</td>
+                    </tr>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>Testando</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+
+        </div>
     </section>
 
 </body>
