--- a/EXTRA_Landing Page/index.html
+++ b/EXTRA_Landing Page/index.html
@@ -18,17 +18,23 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body class="main-bg">
+<body>
+
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="Close menu" role="button">
+
+    <label class="close-menu-label" for="close-menu" title="close-menu"></label>
+
     <aside class="menu white-bg">
         <div class="main-content menu-content">
-            <h1><a href="#home">LOGO</a></h1>
+            <h1 onclick="getElementById('close-menu').checked = false;"><a href="#home">LOGO</a></h1>
             <nav>
-                <ul>
+                <ul onclick="getElementById('close-menu').checked = false;">
                     <li><a href="#intro">intro</a></li>
                     <li><a href="#grid-one">grid-one</a></li>
                     <li><a href="#gallery">gallery</a></li>
                     <li><a href="#grid-two">grid-two</a></li>
                     <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -248,6 +254,60 @@
         </div>
     </section>
 
+    <section id="contact" class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>January brings us Firefox 85</h2>
+                <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are
+                    bringing you support for the :focus-visible pseudo-class in CSS and associated devtools, and the
+                    complete removal of Flash support from Firefox.</p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/javascript-not-optimized.svg" alt="logo de html, css e js">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Contast me</legend>
+                    <div class="form-group">
+                        <label for="first-name">First-name</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Your name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="last-name">Last-name</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Your last name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" id="email" placeholder="Your E-mail">
+                    </div>
+
+                    
+                    <div class="form-group full-width">
+                        <label for="message">E-mail</label>
+                        <textarea name="message" id="message" placeholder="Your Message" cols="30" rows="10"></textarea>
+ 
+                    </div>
+
+                    <div class="form-group full-width">
+                        <button type="submit">Send message</button>
+
+ 
+                    </div>
+                </fieldset>
+
+            </div>
+        </div>
+
+        
+
+    </section>
+
+    <footer id="footer" class="footer white-bg">
+        <p><a rel="nofollow" target="_blank" href="https://github.com/MDayvson">Feito por MDayvson</a></p>
+    </footer>
+    <a class="back-to-top" href="#home">↑</a>
 </body>
 
 </html>
